<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_grt_toolbar"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_weight="1.0"
            app:layout_scrollFlags="enterAlways|scroll"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/edit_images" />
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appbar"
        android:background="@drawable/stack_drop_shadow"
        android:contentDescription="@string/app_name"
        android:minHeight="@dimen/_3sdp" />

    <com.videomaker.photovideoeditorwithanimation.view.EmptyRecyclerView
        android:id="@+id/rvVideoAlbum"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearAds"
        android:layout_below="@+id/appbar" />

    <LinearLayout
        android:id="@+id/list_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearAds"
        android:layout_below="@+id/appbar"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/no_video"
            android:gravity="center_horizontal"
            android:text="@string/album_not_created_yet"
            android:textColor="#ff999999" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearAds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/_3sdp"
        android:orientation="vertical" />
</RelativeLayout>