<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/viewBg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_grt_toolbar"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_weight="1.0"
            app:layout_scrollFlags="enterAlways|scroll"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/creating_video"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearAds"
        android:layout_below="@+id/appbar"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvMsg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/freshDownloadView"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/video_craetion_msg"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_16sdp" />

            <com.videomaker.photovideoeditorwithanimation.view.FreshDownloadView
            android:id="@+id/freshDownloadView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            app:circular_color="@color/card_color_very_light"
            app:circular_progress_color="@color/colorPrimary"
            app:circular_radius="100.0dip"
            app:circular_width="10.0dip"
            app:progress_text_size="42.0sp" />

        <TextView
            android:id="@+id/tvProgress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/freshDownloadView"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/create_video"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/linearAds"
        android:background="@color/black_30" />

    <LinearLayout
        android:id="@+id/linearAds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:orientation="vertical" />
</RelativeLayout>