<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_Main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgimage"
    android:orientation="vertical"
    android:scaleType="fitXY">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/textPrivacyPolicy"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.1">

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/_20sdp"
                android:gravity="center|bottom"
                android:maxLines="1"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_16sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_weight="0.9"
            android:orientation="vertical"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.1"
                android:weightSum="1.0">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    app:cardBackgroundColor="#3400BCD4"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="2dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:id="@+id/linearStart"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/_60sdp"
                            android:layout_height="@dimen/_60sdp"
                            android:layout_gravity="center"
                            android:scaleType="fitXY"
                            android:src="@drawable/makevideo_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginBottom="@dimen/_5sdp"
                            android:gravity="center"
                            android:text="@string/btn_start"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_13sdp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    app:cardBackgroundColor="#3400BCD4"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="2dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:id="@+id/linearAlbum"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/_60sdp"
                            android:layout_height="@dimen/_60sdp"
                            android:layout_gravity="center"

                            android:src="@drawable/mystudio_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginBottom="@dimen/_5sdp"
                            android:gravity="center"
                            android:text="@string/btn_view_album"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_13sdp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_tmp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_weight="0.9"
                android:weightSum="3">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:cardBackgroundColor="#3400BCD4"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="2dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:id="@+id/linearShare"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/_50sdp"
                            android:layout_height="@dimen/_50sdp"
                            android:layout_gravity="center"

                            android:src="@drawable/share_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="@dimen/_5sdp"
                            android:gravity="center"
                            android:text="Share App"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:cardBackgroundColor="#3400BCD4"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="2dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:id="@+id/linearRateUs"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/_50sdp"
                            android:layout_height="@dimen/_50sdp"
                            android:layout_gravity="center"
                            android:padding="@dimen/_4sdp"
                            android:src="@drawable/rateus_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="@dimen/_5sdp"
                            android:gravity="center"
                            android:text="Rate Us"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:cardBackgroundColor="#3400BCD4"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="2dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:id="@+id/linearMoreApps"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_45sdp"
                            android:layout_gravity="center"

                            android:src="@drawable/moreapps_icon" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="@dimen/_5sdp"
                            android:gravity="center"
                            android:text="More Apps"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textPrivacyPolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearAds"
        android:layout_marginBottom="@dimen/_30sdp"
        android:gravity="center"
        android:padding="@dimen/_8sdp"
        android:text="@string/pp"
        android:textColor="@color/blue_A700"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/linearAds"
        android:background="@color/black_30" />


    <LinearLayout
        android:id="@+id/linearAds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4.0dip"
        android:background="@color/transparent"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" />


</RelativeLayout>
